--- a/gitflic-ci.yaml
+++ b/gitflic-ci.yaml
@@ -6,13 +6,6 @@
 
 image: ubuntu:latest
 
-variables:
-  TEST_1_SUCCESS: "true"
-  TEST_2_SUCCESS: "true"
-
-before_script:
-  - echo "Скрипт до основных инструкций (в каждой задаче)"
-
 stages:
   - test
   - build
@@ -21,32 +14,5 @@ stages:
 build:
   stage: build
   script:
-    - echo "Сборка проекта"
-    - echo "Собранный проект" > build.txt
-  artifacts:
-    paths: build.txt
+    - echo "$CI_COMMIT_MESSAGE"
 
-test1:
-  stage: test
-  script:
-    - echo "Первый набор тестов"
-    - echo $TEST_1_SUCCESS
-
-test2:
-  stage: test
-  script:
-    - echo "Второй набор тестов"
-    - echo $TEST_2_SUCCESS
-
-deploy:
-  stage: deploy
-  script:
-    - echo $(cat build.txt)
-    - echo "Развертывание проекта"
-  needs:
-    - build
-  rules:
-    - if: $TEST_1_SUCCESS == "true" && $TEST_2_SUCCESS == "true"
-  
-after_script:
-  - echo "Скрипт после основных инструкций (в каждой задаче)"
