--- a/gitflic-ci.yaml
+++ b/gitflic-ci.yaml
@@ -7,20 +7,15 @@ test_job:
       env="dev"
       echo "env: $env"
       
-      case "$env" in
-        dev)
-          NOTIFICATION_WEBHOOK_URL="dev!!"
-          ;;
-        stage)
-          NOTIFICATION_WEBHOOK_URL="stage!!"
-          ;;
-        prod)
-          NOTIFICATION_WEBHOOK_URL="prod!!"
-          ;;
-        *)
-          echo 'error - target env not detected'
-          exit 1
-          ;;
-      esac
-
+      if [ "$env" = "dev" ]; then
+        NOTIFICATION_WEBHOOK_URL="dev!!"
+      elif [ "$env" = "stage" ]; then
+        NOTIFICATION_WEBHOOK_URL="stage!!"
+      elif [ "$env" = "prod" ]; then
+        NOTIFICATION_WEBHOOK_URL="prod!!"
+      else
+        echo 'error - target env not detected'
+        exit 1
+      fi
+      
       echo $NOTIFICATION_WEBHOOK_URL
