--- a/local-config.yaml
+++ b/local-config.yaml
@@ -13,18 +13,9 @@ extra_check_job:
     reports:
       junit: extra-check/test-results.xml
   rules:
-    - if: '$CI_COMMIT_BRANCH == "feature/*"'
+    - if: '$CI_COMMIT_BRANCH == "master/*"'
       when: always
   tags:
     - test
 
-# Пример задачи для триггера другого пайплайна
-trigger_another_pipeline:
-  stage: deploy
-  trigger:
-    project: 'another-group/another-project'
-    branch: main
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "main"'
-  tags:
-    - deploy
+
