--- a/gitflic-ci.yaml
+++ b/gitflic-ci.yaml
@@ -7,42 +7,9 @@ stages:
 # Образ для выполнения задач
 image: alpine:latest
 
-# Кэширование зависимостей
-cache:
-  paths:
-    - .cache/
-    - node_modules/
-    - surefire-reports/*
-
-# Глобальные переменные
-variables:
-  GLOBAL_VAR: "value"
-
-# Этап сборки
-build_job:
-  stage: build
-  script:
-    - echo "Building the project"
-    - mkdir -p build
-    - echo "Build content" > build/build.txt
-  artifacts:
-    paths:
-      - build/
-  
-trigger-job:
-  trigger:
-    include:
-      - local: local-config.yaml
-    strategy: depend
-    forward: 
-      yaml_variables: true
-      pipeline_variables: true
-
-
 # Этап тестирования
 test_job:
   stage: test
-  image: python:3.8
   before_script:
     - echo "Setting up test environment"
   script:
@@ -50,70 +17,9 @@ test_job:
     - mkdir -p test-reports
     - echo "Test report content" > test-reports/test-report.txt
   artifacts:
-    paths:
-      - test-reports/
     reports:
-      junit:
+      dependency_scanning:
         paths:
-        - /surefire-reports/*
-  rules:
-    - if: '$CI_COMMIT_REF_NAME == "master"'
-      when: always
-    - if: '$CI_COMMIT_MESSAGE =~ /skip tests/'
-      allow_failure: true
+        - sampleCycloneDX.json
 
 
-# Этап деплоя
-deploy_job:
-  stage: deploy
-  script:
-    - echo "Deploying the project"
-    - mkdir -p deploy
-    - echo "Deploy content" > deploy/deploy.txt
-  artifacts:
-    paths:
-      - deploy/
-    name: "deploy-$GLOBAL_VAR"
-  only:
-    - master
-  needs: [ build_job ]
-
-
-# Пример задачи с расширением
-extended_job:
-  extends: .common_template
-  stage: test
-  script:
-    - echo "This job extends a common template"
-
-# Пример задачи с исключением
-excluded_job:
-  stage: test
-  script:
-    - echo "This job should not run on branch dev"
-  except:
-    - dev
-  tags:
-    - test
-
-# Шаблон для расширения
-.common_template:
-  before_script:
-    - echo "This is a common setup"
-  after_script:
-    - echo "This is a common teardown"
-  variables:
-    COMMON_VAR: "common_value"
-
-# Дополнительные правила и исключения
-conditional_job:
-  stage: test
-  script:
-    - echo "rules"
-  rules:
-    - if: '$CI_COMMIT_MESSAGE =~ /run conditional job/'
-      when: on_success
-    - if: '$CI_COMMIT_REF_NAME == "dev/*"'
-      allow_failure: true
-  tags:
-    - test
